// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullBleed /> by default should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
      >
        <LazyLoader
          componentProps={
            Object {
              "imageHeight": undefined,
              "imageWidth": undefined,
              "isFluid": true,
              "isLazyLoaded": true,
              "sizes": null,
              "srcSet": null,
            }
          }
          lazyComponent={[Function]}
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "placeholderImageUrl": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl=""
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <div
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                >
                  <Label
                    content="Image not found!"
                  >
                    <div
                      className="ui label"
                      onClick={[Function]}
                    >
                      Image not found!
                    </div>
                  </Label>
                </div>
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`hasGradient\` is passed should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={true}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed has-gradient"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-gradient"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
      >
        <LazyLoader
          componentProps={
            Object {
              "imageHeight": undefined,
              "imageWidth": undefined,
              "isFluid": true,
              "isLazyLoaded": true,
              "sizes": null,
              "srcSet": null,
            }
          }
          lazyComponent={[Function]}
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "placeholderImageUrl": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl=""
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <div
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                >
                  <Label
                    content="Image not found!"
                  >
                    <div
                      className="ui label"
                      onClick={[Function]}
                    >
                      Image not found!
                    </div>
                  </Label>
                </div>
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
    </div>
  </Segment>
</FullBleed>
`;

exports[`<FullBleed /> if \`props.children > 0\` should have the right structure 1`] = `
<FullBleed
  bottomOffset="0px"
  hasGradient={false}
  imageUrl="🐱🐱"
  placeholderImageUrl={null}
  sizes={null}
  srcSet={null}
>
  <Segment
    className="full-bleed has-children"
    style={
      Object {
        "--full-bleed-bottom-offset": "0px",
      }
    }
    vertical={true}
  >
    <div
      className="ui vertical segment full-bleed has-children"
      style={
        Object {
          "--full-bleed-bottom-offset": "0px",
        }
      }
    >
      <withLazyLoad(ResponsiveImage)
        imageUrl="🐱🐱"
        isFluid={true}
        isLazyLoaded={true}
        placeholderImageUrl={null}
        sizes={null}
        srcSet={null}
      >
        <LazyLoader
          componentProps={
            Object {
              "imageHeight": undefined,
              "imageWidth": undefined,
              "isFluid": true,
              "isLazyLoaded": true,
              "sizes": null,
              "srcSet": null,
            }
          }
          lazyComponent={[Function]}
          lazyProps={
            Object {
              "imageUrl": "🐱🐱",
              "placeholderImageUrl": null,
            }
          }
        >
          <div />
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl=""
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={true}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <div
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src=""
                  srcSet={null}
                  title="Image Title"
                >
                  <Label
                    content="Image not found!"
                  >
                    <div
                      className="ui label"
                      onClick={[Function]}
                    >
                      Image not found!
                    </div>
                  </Label>
                </div>
              </Image>
            </figure>
          </ResponsiveImage>
          <div />
        </LazyLoader>
      </withLazyLoad(ResponsiveImage)>
      🏛
    </div>
  </Segment>
</FullBleed>
`;
